--- a/Day_15_Wed_22_1_2020/src/index.html
+++ b/Day_15_Wed_22_1_2020/src/index.html
@@ -2,8 +2,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="styles.css">
-        <script src="https://web3examples.com/lib/web3-browserify.js"></script>   
+        <link rel="stylesheet" href="styles.css">   
+        <script src="web3connect-browserify.js"></script>   
     </head>
     <body>
         <h1>Subscription service</h1>
