--- a/Day_05_Mon_2_12_2019/src/index.html
+++ b/Day_05_Mon_2_12_2019/src/index.html
@@ -3,14 +3,14 @@
 <html>
     <head>
         <link rel="stylesheet" href="styles.css">
-        <script src="https://web3examples.com/lib/web3-browserify.js"></script>   
+        <script src="web3-browserify.js"></script>   
     </head>
     <body>
-        <h1>Get the current amount of funds in Casino Bank</h1>
+        <h1>Get the current amount of funds</h1>
         <div class="buttonHolder">
             <input type= "button" class="button" value="Get funds" onclick="f();">
         </div>
-        <pre id="log"></pre>
-        <script src="script.js"></script>           
-    </body>
+        <pre id="log"></pre>      
+        <script src="script.js"></script>   
+    </body>  
 </html>
